Create the third baseline based on 3 blocks VGG.

--- a/PredictiveUncertainty.ipynb
+++ b/PredictiveUncertainty.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +50,166 @@
      "text": [
       "Train on 50000 samples, validate on 10000 samples\n",
       "Epoch 1/10\n",
+      "50000/50000 [==============================] - 305s 6ms/sample - loss: 1.7424 - accuracy: 0.3677 - val_loss: 1.5341 - val_accuracy: 0.4407\n",
+      "Epoch 2/10\n",
+      "50000/50000 [==============================] - 272s 5ms/sample - loss: 1.3961 - accuracy: 0.4985 - val_loss: 1.3596 - val_accuracy: 0.5087\n",
+      "Epoch 3/10\n",
+      "50000/50000 [==============================] - 277s 6ms/sample - loss: 1.2217 - accuracy: 0.5632 - val_loss: 1.2782 - val_accuracy: 0.5451\n",
+      "Epoch 4/10\n",
+      "50000/50000 [==============================] - 284s 6ms/sample - loss: 1.0985 - accuracy: 0.6121 - val_loss: 1.1107 - val_accuracy: 0.6119\n",
+      "Epoch 5/10\n",
+      "50000/50000 [==============================] - 280s 6ms/sample - loss: 0.9979 - accuracy: 0.6503 - val_loss: 1.0768 - val_accuracy: 0.6210\n",
+      "Epoch 6/10\n",
+      "50000/50000 [==============================] - 2994s 60ms/sample - loss: 0.9100 - accuracy: 0.6816 - val_loss: 0.9742 - val_accuracy: 0.6598\n",
+      "Epoch 7/10\n",
+      "50000/50000 [==============================] - 268s 5ms/sample - loss: 0.8408 - accuracy: 0.7075 - val_loss: 0.9813 - val_accuracy: 0.6578\n",
+      "Epoch 8/10\n",
+      "30720/50000 [=================>............] - ETA: 1:42 - loss: 0.7787 - accuracy: 0.7313"
+     ]
+    }
+   ],
+   "source": [
+    "class VGG3CIFAR10Model(cifar10model.AbstractCIFAR10ImageClassificationModel):\n",
+    "    \n",
+    "    # Set model\n",
+    "    def define_model(self):\n",
+    "        model = Sequential()\n",
+    "        model.add(Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same', input_shape=(32, 32, 3)))\n",
+    "        model.add(Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(MaxPooling2D((2, 2)))\n",
+    "        model.add(Conv2D(64, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(Conv2D(64, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(MaxPooling2D((2, 2)))\n",
+    "        model.add(Conv2D(128, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(Conv2D(128, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(MaxPooling2D((2, 2)))\n",
+    "        model.add(Flatten())\n",
+    "        model.add(Dense(128, activation='relu', kernel_initializer='he_uniform'))\n",
+    "        model.add(Dense(10, activation='softmax'))\n",
+    "        \n",
+    "        # compile model\n",
+    "        opt = SGD(lr=0.001, momentum=0.9)\n",
+    "        model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "        return model\n",
+    "    \n",
+    "vgg3model = VGG3CIFAR10Model(10, 10, 64)\n",
+    "vgg3model.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 50000 samples, validate on 10000 samples\n",
+      "Epoch 1/10\n",
+      "50000/50000 [==============================] - 211s 4ms/sample - loss: 1.8013 - accuracy: 0.3524 - val_loss: 1.4696 - val_accuracy: 0.4713\n",
+      "Epoch 2/10\n",
+      "50000/50000 [==============================] - 204s 4ms/sample - loss: 1.4135 - accuracy: 0.4954 - val_loss: 1.3418 - val_accuracy: 0.5123\n",
+      "Epoch 3/10\n",
+      "50000/50000 [==============================] - 212s 4ms/sample - loss: 1.2604 - accuracy: 0.5532 - val_loss: 1.1928 - val_accuracy: 0.5821\n",
+      "Epoch 4/10\n",
+      "50000/50000 [==============================] - 1733s 35ms/sample - loss: 1.1440 - accuracy: 0.5992 - val_loss: 1.1412 - val_accuracy: 0.5982\n",
+      "Epoch 5/10\n",
+      "50000/50000 [==============================] - 193s 4ms/sample - loss: 1.0513 - accuracy: 0.6334 - val_loss: 1.0914 - val_accuracy: 0.6186\n",
+      "Epoch 6/10\n",
+      "50000/50000 [==============================] - 195s 4ms/sample - loss: 0.9756 - accuracy: 0.6603 - val_loss: 1.0238 - val_accuracy: 0.6433\n",
+      "Epoch 7/10\n",
+      "50000/50000 [==============================] - 1674s 33ms/sample - loss: 0.9140 - accuracy: 0.6823 - val_loss: 1.0111 - val_accuracy: 0.6489\n",
+      "Epoch 8/10\n",
+      "50000/50000 [==============================] - 194s 4ms/sample - loss: 0.8534 - accuracy: 0.7060 - val_loss: 0.9581 - val_accuracy: 0.6768\n",
+      "Epoch 9/10\n",
+      "50000/50000 [==============================] - 197s 4ms/sample - loss: 0.7955 - accuracy: 0.7246 - val_loss: 0.9550 - val_accuracy: 0.6699\n",
+      "Epoch 10/10\n",
+      "50000/50000 [==============================] - 191s 4ms/sample - loss: 0.7453 - accuracy: 0.7414 - val_loss: 0.9406 - val_accuracy: 0.6796\n",
+      "> 67.960\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'display_results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-a8a69464e700>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mvgg2model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVGG2CIFAR10Model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mvgg2model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/code/predictiveuncertainty/classes/abstractmodel.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'> %.3f'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0macc\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'display_results' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class VGG2CIFAR10Model(cifar10model.AbstractCIFAR10ImageClassificationModel):\n",
+    "    \n",
+    "    # Set model\n",
+    "    def define_model(self):\n",
+    "        model = Sequential()\n",
+    "        model.add(Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same', input_shape=(32, 32, 3)))\n",
+    "        model.add(Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(MaxPooling2D((2, 2)))\n",
+    "        model.add(Conv2D(64, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(Conv2D(64, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(MaxPooling2D((2, 2)))\n",
+    "        model.add(Flatten())\n",
+    "        model.add(Dense(128, activation='relu', kernel_initializer='he_uniform'))\n",
+    "        model.add(Dense(10, activation='softmax'))\n",
+    "        \n",
+    "        # compile model\n",
+    "        opt = SGD(lr=0.001, momentum=0.9)\n",
+    "        model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "        return model\n",
+    "    \n",
+    "vgg2model = VGG2CIFAR10Model(10, 10, 64)\n",
+    "vgg2model.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 50000 samples, validate on 10000 samples\n",
+      "Epoch 1/10\n",
       "50000/50000 [==============================] - 130s 3ms/sample - loss: 1.7780 - accuracy: 0.3648 - val_loss: 1.5435 - val_accuracy: 0.4421\n",
       "Epoch 2/10\n",
       "50000/50000 [==============================] - 121s 2ms/sample - loss: 1.4202 - accuracy: 0.4909 - val_loss: 1.3497 - val_accuracy: 0.5218\n",
       "Epoch 3/10\n",
-      "18112/50000 [=========>....................] - ETA: 1:11 - loss: 1.3000 - accuracy: 0.5402"
+      "50000/50000 [==============================] - 117s 2ms/sample - loss: 1.2688 - accuracy: 0.5497 - val_loss: 1.2607 - val_accuracy: 0.5485\n",
+      "Epoch 4/10\n",
+      "50000/50000 [==============================] - 118s 2ms/sample - loss: 1.1594 - accuracy: 0.5922 - val_loss: 1.1706 - val_accuracy: 0.5883\n",
+      "Epoch 5/10\n",
+      "50000/50000 [==============================] - 134s 3ms/sample - loss: 1.0774 - accuracy: 0.6209 - val_loss: 1.0994 - val_accuracy: 0.6108\n",
+      "Epoch 6/10\n",
+      "50000/50000 [==============================] - 121s 2ms/sample - loss: 1.0122 - accuracy: 0.6459 - val_loss: 1.0733 - val_accuracy: 0.6278\n",
+      "Epoch 7/10\n",
+      "50000/50000 [==============================] - 116s 2ms/sample - loss: 0.9550 - accuracy: 0.6668 - val_loss: 1.0492 - val_accuracy: 0.6287\n",
+      "Epoch 8/10\n",
+      "50000/50000 [==============================] - 123s 2ms/sample - loss: 0.9011 - accuracy: 0.6846 - val_loss: 1.0153 - val_accuracy: 0.6437\n",
+      "Epoch 9/10\n",
+      "50000/50000 [==============================] - 137s 3ms/sample - loss: 0.8579 - accuracy: 0.7009 - val_loss: 0.9945 - val_accuracy: 0.6548\n",
+      "Epoch 10/10\n",
+      "50000/50000 [==============================] - 126s 3ms/sample - loss: 0.8104 - accuracy: 0.7190 - val_loss: 0.9940 - val_accuracy: 0.6532\n",
+      "> 65.320\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'display_results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-7fe6a4f920c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mvgg1model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVGG1CIFAR10Model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mvgg1model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/code/predictiveuncertainty/classes/abstractmodel.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'> %.3f'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0macc\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'display_results' is not defined"
      ]
     }
    ],
