Create the dropout baseline based on 3 blocks VGG.

--- a/PredictiveUncertainty.ipynb
+++ b/PredictiveUncertainty.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from tensorflow.keras.layers import MaxPooling2D\n",
     "from tensorflow.keras.layers import Dense\n",
     "from tensorflow.keras.layers import Flatten\n",
+    "from tensorflow.keras.layers import Dropout\n",
     "from tensorflow.keras.optimizers import SGD\n",
     "from classes import abstractmodel, cifar10model"
    ]
@@ -50,6 +51,65 @@
      "text": [
       "Train on 50000 samples, validate on 10000 samples\n",
       "Epoch 1/10\n",
+      "50000/50000 [==============================] - 343s 7ms/sample - loss: 1.9947 - accuracy: 0.2604 - val_loss: 1.7016 - val_accuracy: 0.3894\n",
+      "Epoch 2/10\n",
+      "50000/50000 [==============================] - 311s 6ms/sample - loss: 1.6382 - accuracy: 0.3991 - val_loss: 1.4731 - val_accuracy: 0.4643\n",
+      "Epoch 3/10\n",
+      "50000/50000 [==============================] - 299s 6ms/sample - loss: 1.4884 - accuracy: 0.4572 - val_loss: 1.3539 - val_accuracy: 0.5141\n",
+      "Epoch 4/10\n",
+      "50000/50000 [==============================] - 292s 6ms/sample - loss: 1.3894 - accuracy: 0.4979 - val_loss: 1.2967 - val_accuracy: 0.5356\n",
+      "Epoch 5/10\n",
+      "50000/50000 [==============================] - 20826s 417ms/sample - loss: 1.3072 - accuracy: 0.5288 - val_loss: 1.1772 - val_accuracy: 0.5806\n",
+      "Epoch 6/10\n",
+      "50000/50000 [==============================] - 38855s 777ms/sample - loss: 1.2444 - accuracy: 0.5518 - val_loss: 1.1114 - val_accuracy: 0.6097\n",
+      "Epoch 7/10\n",
+      " 5632/50000 [==>...........................] - ETA: 4:00 - loss: 1.2035 - accuracy: 0.5678"
+     ]
+    }
+   ],
+   "source": [
+    "class VGG3DropoutCIFAR10Model(cifar10model.AbstractCIFAR10ImageClassificationModel):\n",
+    "    \n",
+    "    # Set model\n",
+    "    def define_model(self):\n",
+    "        model = Sequential()\n",
+    "        model.add(Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same', input_shape=(32, 32, 3)))\n",
+    "        model.add(Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(MaxPooling2D((2, 2)))\n",
+    "        model.add(Dropout(0.2))\n",
+    "        model.add(Conv2D(64, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(Conv2D(64, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(MaxPooling2D((2, 2)))\n",
+    "        model.add(Dropout(0.2))\n",
+    "        model.add(Conv2D(128, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(Conv2D(128, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same'))\n",
+    "        model.add(MaxPooling2D((2, 2)))\n",
+    "        model.add(Dropout(0.2))\n",
+    "        model.add(Flatten())\n",
+    "        model.add(Dense(128, activation='relu', kernel_initializer='he_uniform'))\n",
+    "        model.add(Dropout(0.2))\n",
+    "        model.add(Dense(10, activation='softmax'))\n",
+    "        \n",
+    "        # compile model\n",
+    "        opt = SGD(lr=0.001, momentum=0.9)\n",
+    "        model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "        return model\n",
+    "    \n",
+    "vgg3dropoutmodel = VGG3DropoutCIFAR10Model(10, 10, 64)\n",
+    "vgg3dropoutmodel.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 50000 samples, validate on 10000 samples\n",
+      "Epoch 1/10\n",
       "50000/50000 [==============================] - 305s 6ms/sample - loss: 1.7424 - accuracy: 0.3677 - val_loss: 1.5341 - val_accuracy: 0.4407\n",
       "Epoch 2/10\n",
       "50000/50000 [==============================] - 272s 5ms/sample - loss: 1.3961 - accuracy: 0.4985 - val_loss: 1.3596 - val_accuracy: 0.5087\n",
@@ -64,7 +124,24 @@
       "Epoch 7/10\n",
       "50000/50000 [==============================] - 268s 5ms/sample - loss: 0.8408 - accuracy: 0.7075 - val_loss: 0.9813 - val_accuracy: 0.6578\n",
       "Epoch 8/10\n",
-      "30720/50000 [=================>............] - ETA: 1:42 - loss: 0.7787 - accuracy: 0.7313"
+      "50000/50000 [==============================] - 280s 6ms/sample - loss: 0.7772 - accuracy: 0.7300 - val_loss: 0.9224 - val_accuracy: 0.6755\n",
+      "Epoch 9/10\n",
+      "50000/50000 [==============================] - 268s 5ms/sample - loss: 0.7181 - accuracy: 0.7508 - val_loss: 0.9365 - val_accuracy: 0.6765\n",
+      "Epoch 10/10\n",
+      "50000/50000 [==============================] - 269s 5ms/sample - loss: 0.6655 - accuracy: 0.7689 - val_loss: 0.8803 - val_accuracy: 0.7004\n",
+      "> 70.040\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'display_results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-f35ddaf79ac7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mvgg3model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVGG3CIFAR10Model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mvgg3model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/code/predictiveuncertainty/classes/abstractmodel.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'> %.3f'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0macc\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'display_results' is not defined"
      ]
     }
    ],
